--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,122 @@
-html, body {
+body {
+    margin: 0;
+    height: auto;
+    background-color:  #eee;
+}
+#container {
+    max-width: 900px;
+    margin: auto;
+    box-shadow: 30px 0 40px rgba(0,0,0,0.1),
+    -30px 0 40px rgba(0,0,0,0.1);
+}
+h1 {
+    font-weight: 400;
+    font-size: 2.5rem;
+    text-transform: capitalize;
     margin: 0;
 }
-#intro {
-    display: flex;
-    
+h2 {
+    font-weight: 400;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    margin: 0;
 }
-
-#introImage img {
-    width: 50vw;
+img {
+    display: block;
+    width: 100%;
+}
+#intro {
+    background: white;
 }
 #introContent {
-    width: 50vw;
+    display: flex;
+    flex: 0 1 40vw;
+    height: 50vh;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
+#introText h2{
+    color: #888;
+}
+#introImage {
+    margin: 0;
+    background-image: url(../images/splash-page.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 50vh;
+    flex: 0 1 60vw;
+}
+
 .btn {
     text-decoration: none;
     color: seagreen;
-    padding: 5px 10px;
+    padding: 0.5rem 2rem;
+    display: inline-block;
     border: 1px solid #eee;
     border-radius: 50px;
     text-align: center;
+    margin: 2rem 0 0 0;
+    transition: background 500ms ease;
 }
 .btn:hover{
     background: rgb(56, 56, 56);
     color: #eee;
     border: 1px solid rgb(56, 56, 56);
+}
+.header {
+    padding: 1.5rem;
+    text-align: center;
+    background-color: #333;
+    color: white;
+}
+.header h2 {
+    border-left: 1px dotted white;
+    border-right: 1px dotted white;
+    display: inline-block;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.work img{
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+}
+
+.subheader {
+    background: white;
+    padding: 0.8rem;
+}
+h3 {
+    margin: 0;
+    color: #333;
+}
+.content {
+    padding: 0.8rem;
+    text-align: center;
+}
+a {
+    text-decoration: none;
+    color: seagreen;
+}
+
+@media ( min-width: 500px) {
+    #intro {
+        display: flex;
+        height: 100%;
+    }
+    #introContent {
+        height: 100vh;
+    }
+    #introImage {
+        height: 100vh;
+    }
+}
+
+@media (min-width: 700px) {
+    .btn {
+        padding: 0.5rem 3rem;
+    }
 }
