--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     height: auto;
     background-color:  #eee;
+    font-family: 'Montserrat',
+    sans-serif;
 }
 #container {
     max-width: 900px;
@@ -54,12 +56,12 @@ img {
 .btn {
     text-decoration: none;
     color: seagreen;
-    padding: 0.5rem 2rem;
     display: inline-block;
+    padding: 0.5rem 2rem;
     border: 1px solid #eee;
     border-radius: 50px;
     text-align: center;
-    margin: 2rem 0 0 0;
+    margin-top: 0.5rem;
     transition: background 500ms ease;
 }
 .btn:hover{
@@ -82,14 +84,16 @@ img {
 }
 .work img{
     border-top: 2px solid black;
-    border-bottom: 2px solid black;
 }
 
-.subheader {
+.subHeader {
     background: white;
     padding: 0.8rem;
+    text-align: center;
 }
 h3 {
+    font-size: 2rem;
+    font-weight: 700;
     margin: 0;
     color: #333;
 }
@@ -106,6 +110,9 @@ a {
     #intro {
         display: flex;
         height: 100%;
+    }
+    .btn {
+        margin-top: 2rem;
     }
     #introContent {
         height: 100vh;
