--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 body {
     margin: 0;
     height: auto;
-    background-color:  #eee;
+    background-color:  #adadad;
     font-family: 'Montserrat',
     sans-serif;
 }
 #container {
     max-width: 900px;
     margin: auto;
-    box-shadow: 30px 0 40px rgba(0,0,0,0.1),
-    -30px 0 40px rgba(0,0,0,0.1);
+    box-shadow: 30px 0 40px rgba(0,0,0,0.4),
+    -30px 0 40px rgba(0,0,0,0.4);
 }
 h1 {
     font-weight: 400;
@@ -86,6 +86,17 @@ img {
     padding-right: 1rem;
 }
 
+.work {
+    padding: 7.5px 15px 7.5px;
+}
+
+#first {
+    padding-top: 15px;
+}
+#last {
+    padding-bottom: 15px;
+}
+
 .work img{
     border-top: 2px solid black;
 }
@@ -102,6 +113,7 @@ h3 {
     margin: 0;
     color: #333;
 }
+
 
 .content {
     padding: 0.8rem;
