--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,18 @@ img {
     padding-right: 1rem;
 }
 
+#aboutMeContent {
+    display: flex;
+    align-items: center;
+}
+
+#aboutMeContent img {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    margin: 1vh 3vw;
+}
+
 .work {
     padding: 7.5px 15px 7.5px;
 }
@@ -131,16 +143,19 @@ a {
     color: seagreen;
 }
 
-#aboutMeContent {
+
+.contactContent {
     display: flex;
+    background-color: rgb(36, 36, 36);
+    padding: 0.8rem;
+    min-height: 175px;
+    justify-content: space-evenly;
     align-items: center;
+    
 }
 
-#aboutMeContent img {
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    margin: 1vh 3vw;
+.logo {
+    width: 50px;
 }
 
 @media ( min-width: 500px) {
