updated splash image

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ img {
 }
 #introImage {
     margin: 0;
-    background-image: url(../images/splash-page.jpg);
+    background-image: url(../images/unsplash-image.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
