--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ img {
 
 .btn {
     text-decoration: none;
-    color: seagreen;
+    color: rgba(0,82,187);
     display: inline-block;
     padding: 0.5rem 2rem;
     border: 1px solid #eee;
@@ -140,7 +140,7 @@ h3 {
 
 a {
     text-decoration: none;
-    color: seagreen;
+    color: rgba(0,82,187);
 }
 
 
