--- a/css/style.css
+++ b/css/style.css
@@ -65,13 +65,14 @@ img {
     transition: background 500ms ease;
 }
 
+.btn:visited {
+    color: rgba(0,82,187);
+}
+
 .btn:hover{
     background: rgb(36, 36, 36);
     color: #eee;
     border: 1px solid rgb(36, 36, 36);
-}
-.btn:visted {
-    color: rgba(0,82,187);
 }
 
 .header {
@@ -143,7 +144,7 @@ a {
     text-decoration: none;
     color: rgba(0,82,187);
 }
-a:visted {
+a:visited {
     color: rgba(0,82,187);
 }
 
